[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Sam Noedel <sam.noedel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
indextree = "4.0.0"
permutohedron = "0.2.4"
